feat: link file js

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="slide british">
+    <div class="slide british active">
       <h3>British cat</h3>
     </div>
     <div class="slide scottish">
@@ -25,5 +25,6 @@
       <h3>Abyssinian cat</h3>
     </div>
   </div>
+  <script src="./index.js"></script>
 </body>
 </html>
